--- a/index.html
+++ b/index.html
@@ -8,31 +8,96 @@ Requirements
 Select ONE Additional 
 [ no ] Feature 1 - Use an Incrementing Shortcut 
 [ no ] Feature 2 - Use mouseX or mouseY
-[ no ] Feature 3 - Use if Statement
+[ yes ] Feature 3 - Use if Statement
 [ no ] Feature 4 - Use random()
 [ no ] Feature 5 - Animate a color change
 -->
 
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Unit 7 Project</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.6/processing.min.js"></script>
-    <style></style>
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Animated Night Sky</title>
 
-  <body>
-    <h1>
-      Day At The Park
-    </h1>
 
-      <canvas id="myCanvas" data-processing-sources="myP5Code.pde"> </canvas>
-      
-        
-  </body>
+  <style>
+    body {
+      margin: 0;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
+
+      /* REAL night sky image (stars, no daylight) */
+      background-image: url("https://images.unsplash.com/photo-1444703686981-a3abbc4d4fe3");
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+    }
+
+    h1 {
+      position: absolute;
+      width: 100%;
+      top: 15px;
+      text-shadow: 2px 2px 6px black;
+    }
+  </style>
+
+  <!-- p5.js Library -->
+  <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.min.js"></script>
+</head>
+
+<body>
+  <h1>Animated Night Sky</h1>
+
+  <script>
+    // VARIABLE 1: horizontal position of the moon
+    let moonX = 0;
+
+    // VARIABLE 2: speed of the moon
+    let moonSpeed = 1.3;
+
+    // VARIABLE 3: size of the moon
+    let moonSize = 85;
+
+    function setup() {
+      createCanvas(windowWidth, windowHeight);
+    }
+
+    function draw() {
+      // Clear canvas each frame for animation
+      clear();
+
+      // Stars (points)
+      stroke(255);
+      point(150, 250);
+      point(400, 180);
+      point(650, 300);
+      point(900, 200);
+
+      // Moon (ellipse)
+      noStroke();
+      fill(245);
+      ellipse(moonX, 150, moonSize, moonSize);
+
+      // Ground silhouette (rect)
+      fill(5);
+      rect(0, height - 120, width, 120);
+
+      // Shooting star (line)
+      stroke(255);
+      line(350, 220, 390, 245);
+
+      // Animate moon movement
+      moonX = moonX + moonSpeed;
+
+      // IF STATEMENT FEATURE
+      // Reset moon when it exits the screen
+      if (moonX > width + moonSize) {
+        moonX = -moonSize;
+      }
+    }
+  </script>
+</body>
 </html>
-
 <!--- Taken From Khan Academy Intro to JS: Drawing & Animation --->
